Preserve the return code of the 'make check-local' command, and use it to exit.
Fixes T75

--- a/Makefile.am
+++ b/Makefile.am
@@ -644,13 +644,17 @@ VALGRIND = valgrind --tool=memcheck --leak-check=full --suppressions=vg.supp
 
 check-local:
 	@echo "Running unit tests"
-	@vg= ; test -z "$$VG" || vg="$(VALGRIND)" ;\
-	f="-v" ; test "x$$CUFORMAT" = xjunit && f="-x" ;\
-	cd cunit ;\
-	$$vg ./unit $$f ;\
-	if [ "x$$CUFORMAT" = xjunit ] ; then \
-	$(RM) -rf reports ; mkdir reports ; ./cunit-to-junit.pl ;\
-	fi
+	@vg= ; \
+		test -z "$$VG" || vg="$(VALGRIND)" ; \
+		f="-v" ; \
+		test "x$$CUFORMAT" = xjunit && f="-x" ; \
+		cd cunit ; \
+		$$vg ./unit $$f ; \
+		retval=$$? ; \
+		if [ "x$$CUFORMAT" = xjunit ] ; then \
+			$(RM) -rf reports ; mkdir reports ; ./cunit-to-junit.pl ; \
+		fi ; \
+		exit $$retval
 endif
 
 doc_text_htmlstrip_SOURCE = doc/text/htmlstrip.c
