Apply lex-fix only under selected circumstances
Summary: bison >= 3 does not seem to fail as miserably as bison < 3

Test Plan:
  $ DIFFERENTIAL=$x
  $ export DIFFERENTIAL
  $ make run

Or:

  $ CFLAGS="-g -fPIC -W -Wall -Wextra -Werror"
  $ export CFLAGS
  $ git clean -d -f -x
  $ git reset --hard origin/master
  $ autoreconf -vi || (libtoolize ; autoreconf -vi)
  $ ./configure --enable-autocreate --enable-coverage --enable-gssapi --enable-idled --enable-maintainer-mode --enable-murder --enable-nntp --enable-replication --enable-unit-tests --with-ldap=/usr
  $ make sieve/addr-lex.c sieve/sieve-lex.c

  $ grep -E '^yy_size_t sieveleng;$' sieve/sieve-lex.c && \
      sed -r -i -e 's/int yyl;/yy_size_t yyl;/g' sieve/sieve-lex.c || \
      sed -r -i \
          -e 's/int yyl;/yy_size_t yyl;/' \
          -e 's/\tint i;/\tyy_size_t i;/' \
          sieve/addr-lex.c \
          sieve/sieve-lex.c

Reviewers: #imap_reviewers

Differential Revision: https://git.cyrus.foundation/D13

--- a/Makefile.am
+++ b/Makefile.am
@@ -1476,11 +1476,14 @@ timsieved_timsieved_LDADD = sieve/libcyrus_sieve.la $(LD_SERVER_ADD)
 # contribute fixes to. Needed when building with the following:
 # CFLAGS="-g -fPIC -W -Wall -Wextra -Werror"
 lex-fix: sieve/addr-lex.c sieve/sieve-lex.c
-	sed -r -i \
-		-e 's/int yyl;/yy_size_t yyl;/' \
-		-e 's/\tint i;/\tyy_size_t i;/' \
-		sieve/addr-lex.c \
-		sieve/sieve-lex.c
+	grep -E '^yy_size_t sieveleng;$$' sieve/sieve-lex.c && \
+    	sed -r -i -e 's/int yyl;/yy_size_t yyl;/g' sieve/sieve-lex.c || :
+
+	grep -E ' yy_size_t  _yybytes_len ' sieve/sieve-lex.c && \
+    	sed -r -i -s 's/\tint i;/\tyy_size_t i;/g' sieve/sieve-lex.c || :
+
+	grep -E ' yy_size_t  _yybytes_len ' sieve/addr-lex.c && \
+    	sed -r -i -s 's/\tint i;/\tyy_size_t i;/g' sieve/addr-lex.c || :
 
 GIT_VERSION = $(PACKAGE_VERSION)@git_version@
 
