--- a/configure.in
+++ b/configure.in
@@ -1042,6 +1042,11 @@ if test "$ENABLE_RSS" != no -o "$ENABLE_DAV" != no; then
       AC_SUBST(SQLITE3_CFLAGS)
       AC_SUBST(SQLITE3_LIBS)
 
+      AC_EGREP_HEADER(ICAL_IANA_PARAMETER, ical.h,
+      		AC_DEFINE(HAVE_IANA_PARAMS,[],
+			[Do we have support for IANA params?]),
+		AC_MSG_WARN([Your version of libical can not support scheduling or managed attachments.  Consider upgrading to libical >= 0.48]))
+
       AC_EGREP_HEADER(ICAL_SCHEDULESTATUS_PARAMETER, ical.h,
       		AC_DEFINE(HAVE_SCHEDULING_PARAMS,[],
 			[Do we have built-in support for scheduling params?]))
