--- a/Makefile.am
+++ b/Makefile.am
@@ -177,7 +177,7 @@ endif # NNTPD
 libexec_PROGRAMS += imap/fud
 
 if IDLED
-sbin_PROGRAMS += imap/idled
+libexec_PROGRAMS += imap/idled
 endif # IDLED
 
 if MURDER
