symlink libexec and sbin into bin

--- a/Makefile.am
+++ b/Makefile.am
@@ -1705,6 +1705,9 @@ endif
 	  $(LN_S) -f imtest sivtest && \
 	  $(LN_S) -f imtest smtptest && \
 	  $(LN_S) -f imtest synctest
+## Let's symlink everything else
+	for prog in $(sbin_PROGRAMS); do $(LN_S) -f $(sbindir)/`basename $$prog` $(DESTDIR)$(bindir)/; done
+	for prog in $(libexec_PROGRAMS); do $(LN_S) -f $(libexecdir)/`basename $$prog` $(DESTDIR)$(bindir)/; done
 
 SUFFIXES = .fig.png
 
