--- a/Makefile.am
+++ b/Makefile.am
@@ -41,9 +41,8 @@
 # OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 #
 
-ACLOCAL_AMFLAGS = -I cmulocal
+ACLOCAL_AMFLAGS = -I m4
 AM_CFLAGS = @PERL_CCCDLFLAGS@ $(COV_CFLAGS)
-AM_CXXFLAGS = $(COV_CXXFLAGS)
 
 AM_CPPFLAGS = \
 	$(COM_ERR_CPPFLAGS) \
@@ -51,8 +50,6 @@ AM_CPPFLAGS = \
 	-I${top_builddir}/lib \
 	-I${top_srcdir} \
 	-I${top_srcdir}/lib \
-	-DLIBEXEC_DIR=\"$(libexecdir)\" \
-	-DSBIN_DIR=\"$(sbindir)\" \
 	${DEFS} \
 	${LOCALDEFS} \
 	$(SASLFLAGS) \
@@ -111,8 +108,8 @@ dist_sysconf_DATA =
 lib_LTLIBRARIES = lib/libcyrus_min.la lib/libcyrus.la
 EXTRA_PROGRAMS = doc/text/htmlstrip
 check_PROGRAMS =
-libexec_PROGRAMS =
-sbin_PROGRAMS =
+service_PROGRAMS =
+user_PROGRAMS =
 CLEANFILES =
 EXTRA_DIST = \
 	$(wildcard tools/vzic/*)
@@ -131,24 +128,20 @@ BUILT_SOURCES += \
 	imap/nntp_err.c \
 	imap/lmtpstats.c \
 	imap/pushstats.c \
-	lib/htmlchar.c \
-	lib/htmlchar.h \
 	imap/rfc822_header.c \
 	imap/rfc822_header.h
 
 lib_LTLIBRARIES += imap/libcyrus_imap.la
 
-libexec_PROGRAMS += \
-	master/master \
+service_PROGRAMS += \
 	imap/imapd \
 	imap/lmtpd \
 	imap/pop3d \
 	imap/smmapd
 
-sbin_PROGRAMS += \
+user_PROGRAMS += \
 	imap/arbitron \
 	imap/chk_cyrus \
-	imap/ctl_conversationsdb \
 	imap/ctl_cyrusdb \
 	imap/ctl_deliver \
 	imap/ctl_mboxlist \
@@ -167,45 +160,28 @@ sbin_PROGRAMS += \
 	imap/mbexamine \
 	imap/mbpath \
 	imap/mbtool \
-	imap/message_test \
 	imap/quota \
 	imap/reconstruct \
-	imap/search_test
+	imap/squatter
 
 if HAVE_CLAMAV
-sbin_PROGRAMS += imap/cyr_virusscan
+user_PROGRAMS += imap/cyr_virusscan
 endif # HAVE_CLAMAV
 
-if USE_SQUAT
-sbin_PROGRAMS += imap/squat_dump
-endif
-if SQUATTER
-# Despite the name, the squatter program handles any search engine
-sbin_PROGRAMS += imap/squatter
-endif
-
 if NNTPD
-libexec_PROGRAMS += imap/nntpd
-sbin_PROGRAMS += imap/fetchnews
+service_PROGRAMS += imap/nntpd
+user_PROGRAMS += imap/fetchnews
 endif # NNTPD
 
-libexec_PROGRAMS += imap/fud
+service_PROGRAMS += imap/fud
 
 if IDLED
-sbin_PROGRAMS += imap/idled
+user_PROGRAMS += imap/idled
 endif # IDLED
 
 if MURDER
-sbin_PROGRAMS += imap/mupdate
+service_PROGRAMS += imap/mupdate
 endif # MURDER
-
-if NNTPD
-libexec_PROGRAMS += imap/nntpd
-endif
-
-if CALALARMD
-libexec_PROGRAMS += imap/calalarmd
-endif
 
 if HTTPD
 AM_CPPFLAGS += $(HTTP_CPPFLAGS)
@@ -217,27 +193,27 @@ BUILT_SOURCES += \
 	imap/tz_err.c \
 	imap/tz_err.h
 
-libexec_PROGRAMS += imap/httpd
-sbin_PROGRAMS += \
+service_PROGRAMS += imap/httpd
+user_PROGRAMS += \
 	imap/ctl_zoneinfo \
 	imap/dav_reconstruct
 
 endif # HTTPD
 
 if REPLICATION
-sbin_PROGRAMS += imap/sync_client imap/sync_reset
-libexec_PROGRAMS += imap/sync_server
+user_PROGRAMS += imap/sync_client imap/sync_reset
+service_PROGRAMS += imap/sync_server
 endif # REPLICATION
 
 if HAVE_SSL
-sbin_PROGRAMS += imap/tls_prune
+user_PROGRAMS += imap/tls_prune
 endif # HAVE_SSL
 
-sbin_PROGRAMS += imap/unexpunge
+user_PROGRAMS += imap/unexpunge master/master
 
 if SIEVE
 check_PROGRAMS += notifyd/notifytest
-libexec_PROGRAMS += notifyd/notifyd
+service_PROGRAMS += notifyd/notifyd
 endif # SIEVE
 
 else # SERVER
@@ -261,12 +237,12 @@ endif # SERVER
 
 if CMULOCAL
 dist_sysconf_DATA += depot/rc.local.imap depot/rc.local.ptclient
-sbin_PROGRAMS += netnews/remotepurge
+user_PROGRAMS += netnews/remotepurge
 endif # CMULOCAL
 
 if PTCLIENT
-sbin_PROGRAMS += ptclient/ptdump ptclient/ptexpire
-libexec_PROGRAMS += \
+user_PROGRAMS += ptclient/ptdump ptclient/ptexpire
+service_PROGRAMS += \
 	ptclient/ptloader
 endif # PTCLIENT
 
@@ -285,10 +261,10 @@ endif # PERL
 BUILT_SOURCES += sieve/addr.c sieve/sieve.c sieve/sieve_err.c
 lib_LTLIBRARIES += sieve/libcyrus_sieve.la
 check_PROGRAMS += sieve/test
-sbin_PROGRAMS += sieve/sievec sieve/sieved
+user_PROGRAMS += sieve/sievec sieve/sieved
 
 if SERVER
-libexec_PROGRAMS += timsieved/timsieved
+service_PROGRAMS += timsieved/timsieved
 endif # SERVER
 
 endif # SIEVE
@@ -373,7 +349,6 @@ EXTRA_DIST += \
 	lib/charset/windows-1252.t \
 	lib/charset/windows-1255.t \
 	lib/charset/windows-1256.t \
-	lib/htmlchar.st \
 	lib/imapoptions \
 	lib/test/cyrusdb.c \
 	lib/test/cyrusdb.INPUT \
@@ -394,8 +369,6 @@ EXTRA_DIST += \
 	master/README \
 	netnews/inn.diffs \
 	perl/annotator/Daemon.pm \
-	perl/annotator/Makefile \
-	perl/annotator/Makefile.PL \
 	perl/annotator/Makefile.PL.in \
 	perl/annotator/MANIFEST \
 	perl/annotator/Message.pm \
@@ -413,8 +386,6 @@ EXTRA_DIST += \
 	perl/imap/IMAP/Shell.pm \
 	perl/imap/IMAP.pm \
 	perl/imap/IMAP.xs \
-	perl/imap/Makefile \
-	perl/imap/Makefile.PL \
 	perl/imap/Makefile.PL.in \
 	perl/imap/MANIFEST \
 	perl/imap/README \
@@ -422,8 +393,6 @@ EXTRA_DIST += \
 	perl/imap/t/02-admin.t \
 	perl/imap/typemap \
 	perl/imap/xsutil.c \
-	perl/sieve/managesieve/Makefile \
-	perl/sieve/managesieve/Makefile.PL \
 	perl/sieve/managesieve/Makefile.PL.in \
 	perl/sieve/managesieve/managesieve.h \
 	perl/sieve/managesieve/managesieve.pm \
@@ -605,11 +574,7 @@ cunit_FRAMEWORK = \
 	cunit/syslog.c \
 	cunit/cunit-syslog.h \
 	cunit/timeout.c \
-	cunit/timeout.h \
-	cunit/timezones.c \
-	cunit/timezones.h \
-	cunit/timeofday.c \
-	cunit/timeofday.h
+	cunit/timeout.h
 
 cunit_TESTS = \
 	cunit/annotate.testc \
@@ -619,8 +584,6 @@ cunit_TESTS = \
 	cunit/buf.testc \
 	cunit/byteorder64.testc \
 	cunit/charset.testc \
-	cunit/command.testc \
-	cunit/conversations.testc \
 	cunit/crc32.testc \
 	cunit/db.testc \
 	cunit/dlist.testc \
@@ -639,9 +602,7 @@ cunit_TESTS = \
 	cunit/prot.testc \
 	cunit/ptrarray.testc \
 	cunit/quota.testc \
-	cunit/rfc822tok.testc \
-	cunit/search_expr.testc \
-	cunit/seqset.testc
+	cunit/rfc822tok.testc
 
 if SIEVE
 cunit_TESTS += cunit/sieve.testc
@@ -767,9 +728,6 @@ imap_arbitron_LDADD = $(LD_UTILITY_ADD)
 imap_chk_cyrus_SOURCES = imap/chk_cyrus.c imap/cli_fatal.c imap/mutex_fake.c
 imap_chk_cyrus_LDADD = $(LD_UTILITY_ADD)
 
-imap_ctl_conversationsdb_SOURCES = imap/ctl_conversationsdb.c imap/mutex_fake.c
-imap_ctl_conversationsdb_LDADD = $(LD_UTILITY_ADD)
-
 imap_ctl_cyrusdb_SOURCES = imap/cli_fatal.c imap/ctl_cyrusdb.c imap/mutex_fake.c
 imap_ctl_cyrusdb_LDADD = $(LD_UTILITY_ADD)
 
@@ -846,13 +804,6 @@ imap_fud_LDADD = $(LD_SERVER_ADD)
 imap_idled_SOURCES = imap/idled.c imap/mutex_fake.c
 imap_idled_LDADD = $(LD_UTILITY_ADD)
 
-if CALALARMD
-imap_calalarmd_SOURCES = imap/calalarmd.c imap/mutex_fake.c
-imap_calalarmd_LDADD = $(LD_SERVER_ADD) -lm
-else
-EXTRA_DIST += imap/calalarmd.c
-endif # CALALARMD
-
 imap_imapd_SOURCES = \
 	imap/imap_proxy.c \
 	imap/imap_proxy.h \
@@ -889,10 +840,6 @@ nodist_imap_libcyrus_imap_la_SOURCES = \
 
 dist_imap_libcyrus_imap_la_SOURCES =
 
-imap_libcyrus_imap_la_LIBADD = $(COM_ERR_LIBS) $(LIB_UUID) lib/libcyrus_min.la lib/libcyrus.la
-imap_libcyrus_imap_la_CFLAGS = $(AM_CFLAGS) $(CFLAG_VISIBILITY)
-imap_libcyrus_imap_la_CXXFLAGS = $(AM_CXXFLAGS)
-
 imap_libcyrus_imap_la_SOURCES = \
 	imap/annotate.c \
 	imap/annotate.h \
@@ -900,8 +847,6 @@ imap_libcyrus_imap_la_SOURCES = \
 	imap/append.h \
 	imap/backend.c \
 	imap/backend.h \
-	imap/conversations.c \
-	imap/conversations.h \
 	imap/convert_code.c \
 	imap/convert_code.h \
 	imap/dlist.c \
@@ -915,7 +860,6 @@ imap_libcyrus_imap_la_SOURCES = \
 	imap/idlemsg.c \
 	imap/idlemsg.h \
 	imap/imapparse.c \
-	imap/imapparse.h \
 	imap/index.c \
 	imap/index.h \
 	imap/mailbox.c \
@@ -934,7 +878,6 @@ imap_libcyrus_imap_la_SOURCES = \
 	imap/message_guid.h \
 	imap/message.c \
 	imap/message.h \
-	imap/message_priv.h \
 	imap/mupdate-client.c \
 	imap/mupdate-client.h \
 	imap/mutex.h \
@@ -953,15 +896,15 @@ imap_libcyrus_imap_la_SOURCES = \
 	imap/saslserver.c \
 	imap/search_engines.c \
 	imap/search_engines.h \
-	imap/search_expr.c \
-	imap/search_expr.h \
-	imap/search_query.c \
-	imap/search_query.h \
 	imap/seen.h \
 	imap/seen_db.c \
 	imap/sequence.c \
 	imap/sequence.h \
 	imap/setproctitle.c \
+	imap/squat.c \
+	imap/squat.h \
+	imap/squat_internal.c \
+	imap/squat_internal.h \
 	imap/statuscache.h \
 	imap/statuscache_db.c \
 	imap/sync_log.c \
@@ -977,25 +920,10 @@ imap_libcyrus_imap_la_SOURCES = \
 	imap/userdeny_db.c \
 	imap/userdeny.h \
 	imap/version.c \
-	imap/version.h \
-	imap/xstats.c \
-	imap/xstats.h \
-	imap/xstats_metrics.h
+	imap/version.h
 
-if USE_SQUAT
-imap_libcyrus_imap_la_SOURCES += \
-	imap/search_squat.c \
-	imap/squat.c \
-	imap/squat.h \
-	imap/squat_build.c \
-	imap/squat_internal.c \
-	imap/squat_internal.h
-endif
-
-if USE_SPHINX
-imap_libcyrus_imap_la_SOURCES += \
-	imap/search_sphinx.c
-endif
+imap_libcyrus_imap_la_LIBADD = $(COM_ERR_LIBS) $(LIB_UUID) lib/libcyrus_min.la lib/libcyrus.la
+imap_libcyrus_imap_la_CFLAGS = $(AM_CFLAGS) $(CFLAG_VISIBILITY)
 
 if JANSSON
 imap_libcyrus_imap_la_LIBADD += $(JANSSON_LIBS)
@@ -1004,8 +932,6 @@ endif
 
 if HTTPD
 imap_libcyrus_imap_la_SOURCES += \
-	imap/caldav_alarm.c \
-	imap/caldav_alarm.h \
 	imap/caldav_db.c \
 	imap/caldav_db.h \
 	imap/carddav_db.c \
@@ -1023,12 +949,10 @@ imap_libcyrus_imap_la_SOURCES += \
 	imap/http_dav.h \
 	imap/http_dblookup.c \
 	imap/http_ischedule.c \
-	imap/http_jmap.c \
 	imap/http_proxy.c \
 	imap/http_proxy.h \
 	imap/http_rss.c \
-	imap/http_tzdist.c \
-	imap/http_webdav.c \
+	imap/http_timezone.c \
 	imap/httpd.c \
 	imap/httpd.h \
 	imap/jcal.c \
@@ -1039,8 +963,6 @@ imap_libcyrus_imap_la_SOURCES += \
 	imap/smtpclient.h \
 	imap/spool.c \
 	imap/spool.h \
-	imap/webdav_db.c \
-	imap/webdav_db.h \
 	imap/xcal.c \
 	imap/xcal.h \
 	imap/zoneinfo_db.c \
@@ -1051,15 +973,6 @@ nodist_imap_libcyrus_imap_la_SOURCES += \
 	imap/tz_err.c
 
 endif # HTTPD
-
-if USE_XAPIAN
-imap_libcyrus_imap_la_SOURCES += \
-	imap/search_xapian.c \
-	imap/xapian_wrap.h \
-	imap/xapian_wrap.cpp
-imap_libcyrus_imap_la_LIBADD += $(XAPIAN_LIBS)
-imap_libcyrus_imap_la_CXXFLAGS += $(XAPIAN_CXXFLAGS)
-endif
 
 imap_lmtpd_SOURCES = \
 	imap/lmtpd.c \
@@ -1103,9 +1016,6 @@ imap_mbpath_LDADD = $(LD_UTILITY_ADD)
 imap_mbtool_SOURCES = imap/cli_fatal.c imap/mbtool.c imap/mutex_fake.c
 imap_mbtool_LDADD = $(LD_UTILITY_ADD)
 
-imap_message_test_SOURCES = imap/message_test.c imap/mutex_fake.c
-imap_message_test_LDADD = $(LD_UTILITY_ADD)
-
 imap_mupdate_SOURCES = \
 	imap/mupdate.c \
 	imap/mupdate.h \
@@ -1136,7 +1046,6 @@ nodist_imap_httpd_SOURCES = \
 	imap/tz_err.h
 
 imap_httpd_SOURCES = \
-	imap/caldav_alarm.c \
 	imap/caldav_db.c \
 	imap/carddav_db.c \
 	imap/carddav_db.h \
@@ -1148,18 +1057,15 @@ imap_httpd_SOURCES = \
 	imap/http_dav.c \
 	imap/http_dblookup.c \
 	imap/http_ischedule.c \
-	imap/http_jmap.c \
 	imap/http_proxy.c \
 	imap/http_rss.c \
-	imap/http_tzdist.c \
-	imap/http_webdav.c \
+	imap/http_timezone.c \
 	imap/httpd.c \
 	imap/jcal.c \
 	imap/mutex_fake.c \
 	imap/proxy.c \
 	imap/smtpclient.c \
 	imap/spool.c \
-	imap/webdav_db.c \
 	imap/xcal.c \
 	imap/zoneinfo_db.c \
 	master/service.c
@@ -1195,22 +1101,17 @@ imap_reconstruct_LDADD = $(LD_UTILITY_ADD)
 imap_dav_reconstruct_SOURCES = imap/cli_fatal.c imap/mutex_fake.c imap/dav_reconstruct.c
 imap_dav_reconstruct_LDADD = $(LD_UTILITY_ADD)
 
-imap_search_test_SOURCES = imap/search_test.c imap/mutex_fake.c
-imap_search_test_LDADD = $(LD_UTILITY_ADD)
-
 imap_smmapd_SOURCES = imap/mutex_fake.c imap/proxy.c imap/smmapd.c master/service.c
 imap_smmapd_LDADD = $(LD_SERVER_ADD)
 
-imap_squatter_SOURCES = imap/cli_fatal.c imap/mutex_fake.c imap/squatter.c
+imap_squatter_SOURCES = imap/cli_fatal.c imap/mutex_fake.c imap/squatter.c imap/squat_build.c
 imap_squatter_LDADD = $(LD_UTILITY_ADD)
 
-imap_squat_dump_SOURCES = imap/cli_fatal.c imap/mutex_fake.c imap/squat_dump.c
-imap_squat_dump_LDADD = $(LD_UTILITY_ADD)
-
-imap_sync_client_SOURCES = imap/mutex_fake.c imap/sync_client.c imap/sync_support.c imap/sync_support.h
+imap_sync_client_SOURCES = imap/mutex_fake.c imap/sync_client.c \
+	imap/sync_support.c imap/sync_support.h
 imap_sync_client_LDADD = $(LD_UTILITY_ADD)
 
-imap_sync_reset_SOURCES = imap/mutex_fake.c imap/sync_reset.c imap/sync_support.c imap/sync_support.h
+imap_sync_reset_SOURCES = imap/mutex_fake.c imap/sync_reset.c imap/sync_support.c
 imap_sync_reset_LDADD = $(LD_UTILITY_ADD)
 
 imap_sync_server_SOURCES = imap/mutex_fake.c imap/sync_server.c imap/sync_support.c master/service.c
@@ -1237,19 +1138,11 @@ imap/http_err.h imap/http_err.c: imap/http_err.et $(COMPILE_ET_DEP)
 imap/tz_err.h imap/tz_err.c: imap/tz_err.et $(COMPILE_ET_DEP)
 	cd imap && $(COMPILE_ET) ../$(top_srcdir)/imap/tz_err.et
 
-if MAINTAINER_MODE
 imap/rfc822_header.c: imap/rfc822_header.st
 	${top_srcdir}/tools/compile_st.pl -c $< > $@.NEW && mv $@.NEW $@
 
 imap/rfc822_header.h: imap/rfc822_header.st
 	${top_srcdir}/tools/compile_st.pl -h $< > $@.NEW && mv $@.NEW $@
-
-lib/htmlchar.c: lib/htmlchar.st
-	${top_srcdir}/tools/compile_st.pl -c $< > $@.NEW && mv $@.NEW $@
-
-lib/htmlchar.h: lib/htmlchar.st
-	${top_srcdir}/tools/compile_st.pl -h $< > $@.NEW && mv $@.NEW $@
-endif
 
 imtest_imtest_SOURCES = imtest/imtest.c
 imtest_imtest_LDADD = $(LD_BASIC_ADD)
@@ -1276,8 +1169,6 @@ lib_libcyrus_la_SOURCES = \
 	lib/cyrusdb_skiplist.c \
 	lib/cyrusdb_twoskip.c \
 	lib/glob.c \
-	lib/htmlchar.c \
-	lib/htmlchar.h \
 	lib/imapurl.c \
 	lib/imclient.c \
 	lib/imparse.c \
@@ -1296,6 +1187,9 @@ lib_libcyrus_la_SOURCES = \
 	lib/times.c \
 	lib/tok.c \
 	lib/wildmat.c
+if USE_BERKELEY
+lib_libcyrus_la_SOURCES += lib/cyrusdb_berkeley.c
+endif
 if USE_SQL
 lib_libcyrus_la_SOURCES += lib/cyrusdb_sql.c
 endif
@@ -1348,7 +1242,7 @@ else
 lib_libcyrus_min_la_SOURCES += lib/map_nommap.c
 endif
 endif
-lib_libcyrus_min_la_LIBADD = $(LTLIBOBJS) $(LIB_UUID)
+lib_libcyrus_min_la_LIBADD = $(LTLIBOBJS)
 lib_libcyrus_min_la_CFLAGS = $(AM_CFLAGS) $(CFLAG_VISIBILITY)
 
 lib/chartable.c: lib/mkchartable.pl lib/charset/unifix.txt \
@@ -1357,8 +1251,6 @@ lib/chartable.c: lib/mkchartable.pl lib/charset/unifix.txt \
 	@echo "### Building chartables..."
 	perl $(top_srcdir)/lib/mkchartable.pl -m $(top_srcdir)/lib/charset/unifix.txt -m $(top_srcdir)/lib/charset/UnicodeData.txt -a $(top_srcdir)/lib/charset/aliases.txt -o $@ $(top_srcdir)/lib/charset/*.t || (rm -f $@ && exit 1)
 	@echo "### Done building chartables."
-
-lib/imapopts.h: lib/imapopts.c
 
 lib/imapopts.c: lib/imapoptions tools/config2header
 	$(top_srcdir)/tools/config2header CC="$(CC)" $(top_builddir)/lib/imapopts.c $(top_builddir)/lib/imapopts.h < $(top_srcdir)/lib/imapoptions
@@ -1411,17 +1303,13 @@ dist_man_MANS = \
 	man/reconstruct.8 \
 	man/rmnews.8 \
 	man/smmapd.8 \
+	man/squatter.8 \
 	man/sync_client.8 \
 	man/sync_reset.8 \
 	man/sync_server.8 \
 	man/timsieved.8 \
 	man/tls_prune.8 \
 	man/unexpunge.8
-
-if USE_SQUAT
-dist_man_MANS += \
-	man/squatter.8
-endif
 
 if NNTPD
 dist_man_MANS += \
@@ -1587,25 +1475,32 @@ timsieved_timsieved_LDADD = sieve/libcyrus_sieve.la $(LD_SERVER_ADD)
 # contribute fixes to. Needed when building with the following:
 # CFLAGS="-g -fPIC -W -Wall -Wextra -Werror"
 lex-fix: sieve/addr-lex.c sieve/sieve-lex.c
-	grep -E '^yy_size_t sieveleng;$$' sieve/sieve-lex.c && \
-    	sed -r -i -e 's/int yyl;/yy_size_t yyl;/g' sieve/sieve-lex.c || :
-
-	grep -E ' yy_size_t  _yybytes_len ' sieve/sieve-lex.c && \
-    	sed -r -i -s 's/\tint i;/\tyy_size_t i;/g' sieve/sieve-lex.c || :
-
-	grep -E ' yy_size_t  _yybytes_len ' sieve/addr-lex.c && \
-    	sed -r -i -s 's/\tint i;/\tyy_size_t i;/g' sieve/addr-lex.c || :
+	sed -r -i \
+		-e 's/int yyl;/yy_size_t yyl;/' \
+		-e 's/\tint i;/\tyy_size_t i;/' \
+		sieve/addr-lex.c \
+		sieve/sieve-lex.c
 
 GIT_VERSION = $(PACKAGE_VERSION)@git_version@
 
 snapshot::
-	@echo "Creating snapshot $(PACKAGE_NAME)-$(GIT_VERSION)"
+	@echo "creating snapshot $(GIT_VERSION)"
 	@$(MKDIR_P) snapshot
 	@git archive --format=tar --prefix=$(PACKAGE_NAME)-$(GIT_VERSION)/ HEAD | tar -C snapshot/ -x -f -
 	@echo "/* $(PACKAGE_NAME) $(GIT_VERSION) */" > snapshot/$(PACKAGE_NAME)-$(GIT_VERSION)/xversion.h
 	@echo "#define _CYRUS_VERSION \"$(GIT_VERSION)\"" >> snapshot/$(PACKAGE_NAME)-$(GIT_VERSION)/xversion.h
 	@echo "#define CYRUS_GITVERSION \"`git log --abbrev=8 --pretty=\"format:%h %ci\" -1 | cut -d\" \" -f1,2`\"" >> snapshot/$(PACKAGE_NAME)-$(GIT_VERSION)/xversion.h
 	@touch snapshot/$(PACKAGE_NAME)-$(GIT_VERSION)/xversion
+	@cd snapshot/$(PACKAGE_NAME)-$(GIT_VERSION) ; sh SMakefile
+	@for d in $(DIST_SUBDIRS); \
+	do \
+	(cd snapshot/$(PACKAGE_NAME)-$(GIT_VERSION)/$$d; \
+	if [ -f Makefile.dist ]; then \
+	echo "### Making" snapshot "in" `pwd`; \
+	$(MAKE) $(MFLAGS) YACC='$(YACC)' LEX='$(LEX)' \
+	COMPILE_ET='$(COMPILE_ET)' -f Makefile.dist dist ; \
+	fi) || exit 1; \
+	done
 	@echo "creating tarfile"
 	tar -C snapshot -c -f - $(PACKAGE_NAME)-$(GIT_VERSION) | gzip -9 > $(PACKAGE_NAME)-$(GIT_VERSION).tar.gz
 	@rm -rf snapshot
@@ -1698,9 +1593,10 @@ if PERL
 endif
 
 ## The @$(MKDIR_P) line is added due to a bug in Automake 1.10 and can be removed if using Automake 1.12.
-	@$(MKDIR_P) $(DESTDIR)$(libexecdir)
+	@$(MKDIR_P) $(DESTDIR)$(userdir)
+	@$(MKDIR_P) $(DESTDIR)$(servicedir)
 if SERVER
-	cd $(DESTDIR)$(libexecdir) && \
+	cd $(DESTDIR)$(servicedir) && \
 	  $(LN_S) -f pop3d pop3proxyd && \
 	  $(LN_S) -f imapd proxyd && \
 	  $(LN_S) -f lmtpd lmtpproxyd
@@ -1716,11 +1612,6 @@ endif
 	  $(LN_S) -f imtest smtptest && \
 	  $(LN_S) -f imtest synctest
 
-install-binsymlinks:
-## Let's symlink everything else
-	for prog in $(sbin_PROGRAMS); do $(LN_S) -f $(sbindir)/`basename $$prog` $(DESTDIR)$(bindir)/; done
-	for prog in $(libexec_PROGRAMS); do $(LN_S) -f $(libexecdir)/`basename $$prog` $(DESTDIR)$(bindir)/; done
-
 SUFFIXES = .fig.png
 
 .fig.png:
@@ -1731,7 +1622,3 @@ valgrind:
 
 libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status libtool
-
-# Install for Cassandane
-cassandane:
-	$(MAKE) DESTDIR=`cd ../inst ; /bin/pwd` install
