partial cherry pick of 8fc19990e2222d1c66f131552fdef94e4429960c
which was:

forward port Ken Murchison's sync changes from 2.4 to 2.5

Squashed commit of the following:

commit 7da5b928e5710ab7c25cfe1bab2277b1285ff870
Author: ellie timoney <elliefm@users.noreply.github.com>
Date:   Mon Mar 30 11:16:09 2015 +1100

    finally, remove obsolete sync_server.c

commit 1e39510dda5ff83629b2187f92c8abc389564935
Author: Ken Murchison <murch@andrew.cmu.edu>
Date:   Wed Mar 12 09:29:39 2014 -0400

    sync_support.c: log DB errors (annotations and subs)

    Conflicts:
    	imap/sync_support.c

commit bb84625a1b11796f242bcea3be4c0fbbe845a5d2
Author: Ken Murchison <murch@andrew.cmu.edu>
Date:   Wed Mar 5 14:04:14 2014 -0500

    sync_support.c: fixed logging of mailbox updates

commit f2df923fb685d12b62c2558884eba86532552525
Author: Ken Murchison <murch@andrew.cmu.edu>
Date:   Wed Mar 5 13:56:02 2014 -0500

    sync_support: log mailbox updates as they occur

    Conflicts:
    	imap/sync_support.c

commit fd9d0ad2ab57cf083da5db6bc9ba9c8c73ca3d3c
Author: Ken Murchison <murch@andrew.cmu.edu>
Date:   Wed Mar 5 13:49:18 2014 -0500

    imapd.c: reset client inactivity timeout after cmd_syncapply() (in case it took a really long time to process)

commit ac4fb718cf4560f2d13d9c496597f09eba651dac
Author: ellie timoney <elliefm@users.noreply.github.com>
Date:   Fri Mar 27 11:39:59 2015 +1100

    reorder functions to same order as ken's version

commit 09f227cdb076ca5bb8beda58c71794d6dbe2166b
Author: Ken Murchison <murch@andrew.cmu.edu>
Date:   Mon Mar 3 08:51:35 2014 -0500

    fix typo in comment

commit 35406befdf0732aec9862734219c540dbe68e071
Author: Ken Murchison <murch@andrew.cmu.edu>
Date:   Wed Feb 26 14:46:32 2014 -0500

    imapd.c: break initial XFER sync into its own function.  rebuild XFER item list after initial user sync

    Conflicts:
    	imap/imapd.c

commit dbb0233a13d5c60b610da8f6ff36e6a032b75790
Author: Ken Murchison <murch@andrew.cmu.edu>
Date:   Wed Feb 26 09:06

--- a/Makefile.am
+++ b/Makefile.am
@@ -226,7 +226,6 @@ endif # HTTPD
 
 if REPLICATION
 sbin_PROGRAMS += imap/sync_client imap/sync_reset
-libexec_PROGRAMS += imap/sync_server
 endif # REPLICATION
 
 if HAVE_SSL
@@ -863,6 +862,8 @@ imap_imapd_SOURCES = \
 	imap/pushstats.h \
 	imap/proxy.c \
 	imap/proxy.h \
+	imap/sync_support.c \
+	imap/sync_support.h \
 	master/service.c
 
 if AUTOCREATE
@@ -1214,9 +1215,6 @@ imap_sync_client_LDADD = $(LD_UTILITY_ADD)
 imap_sync_reset_SOURCES = imap/mutex_fake.c imap/sync_reset.c imap/sync_support.c imap/sync_support.h
 imap_sync_reset_LDADD = $(LD_UTILITY_ADD)
 
-imap_sync_server_SOURCES = imap/mutex_fake.c imap/sync_server.c imap/sync_support.c master/service.c
-imap_sync_server_LDADD = $(LD_SERVER_ADD)
-
 imap_tls_prune_SOURCES = imap/cli_fatal.c imap/mutex_fake.c imap/tls_prune.c
 imap_tls_prune_LDADD = $(LD_UTILITY_ADD)
 
@@ -1416,7 +1414,6 @@ dist_man_MANS = \
 	man/smmapd.8 \
 	man/sync_client.8 \
 	man/sync_reset.8 \
-	man/sync_server.8 \
 	man/timsieved.8 \
 	man/tls_prune.8 \
 	man/unexpunge.8
@@ -1714,6 +1711,7 @@ if SERVER
 	cd $(DESTDIR)$(libexecdir) && \
 	  $(LN_S) -f pop3d pop3proxyd && \
 	  $(LN_S) -f imapd proxyd && \
+	  $(LN_S) -f imapd sync_server && \
 	  $(LN_S) -f lmtpd lmtpproxyd
 endif
 ## The @$(MKDIR_P) line is added due to a bug in Automake 1.10 and can be removed if using Automake 1.12.
