Makefile: need to create LIBEXEC_DIR and SBIN_DIR at build time
so if you do make prefix=/foo/bar then it works

--- a/Makefile.am
+++ b/Makefile.am
@@ -51,6 +51,8 @@ AM_CPPFLAGS = \
 	-I${top_builddir}/lib \
 	-I${top_srcdir} \
 	-I${top_srcdir}/lib \
+	-DLIBEXEC_DIR=\"$(libexecdir)\" \
+	-DSBIN_DIR=\"$(sbindir)\" \
 	${DEFS} \
 	${LOCALDEFS} \
 	$(SASLFLAGS) \
